test/fail_compile/zero_dot.tas
.zero . # cannot have a size-expression depending on relocation
